compiler/tests/compile-error/bit-shift-right-overflow.arret
(import [stdlib base])

(def _ (bit-shift-right 0 65))
      ;^^^^^^^^^^^^^^^^^^^^^^ ERROR shift right by 65 bits exceeds 64 bits

(defn main! () ->! ())